差不多完成

--- a/jun/home.html
+++ b/jun/home.html
@@ -4,12 +4,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>首页</title>
-		<link rel="stylesheet" href="mycss/reset.css" />
-
+		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-		<link rel="stylesheet" href="mycss/sidebar-menu.css">
-		<link rel="stylesheet" href="mycss/home.css" />
+		<link rel="stylesheet" href="css/sidebar-menu.css">
+		<link rel="stylesheet" href="css/home.css" />
 	</head>
 
 	<body>
@@ -90,16 +89,16 @@
 
 		</aside>
 		<section class="home-section">
-			<iframe name="Info1" id="Info1" frameborder="0" src="mycss/iframe.html" width="100%" scrolling="yes" frameborder="0">
+			<iframe name="Info1" id="Info1" frameborder="0" src="iframe.html" width="100%" scrolling="yes" frameborder="0">
 				
 			</iframe>
 
 		</section>
 
 	</body>
-	<script type="text/javascript" src="mycss/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.js"></script>
 	<!--<script type="text/javascript" src="mycss/H-ui.js" ></script>-->
-	<script src="mycss/sidebar-menu.js"></script>
+	<script src="js/sidebar-menu.js"></script>
 	<script>
 		$.sidebarMenu($('.sidebar-menu'))
 
